# eve-pi-solver

./: Cargo.toml  items.yaml
examples/: system.yaml
src/: cli.rs  items.rs  main.rs  solver.rs
src/data/: system.rs
tools/: hannis_scraper.js
