[package]
name = "pi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
env_logger = "0.11.2"
log = "0.4.20"
serde = { version = "1.0.197", features = ["derive"] }
serde_yaml = "0.9.32"
thiserror = "1.0.57"
